tests/invalid/generated_binop_bitxor_bytes_int/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytes = b"hello"
    y: int = 1
    z = x ^ y
